[gd_scene load_steps=4 format=2]

[ext_resource path="res://Icons/arrows-minimize-solid.svg" type="Texture" id=1]
[ext_resource path="res://Scripts/Field.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 250.0

[node name="Field" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="HoverSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="X-O" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Winner" type="ColorRect" parent="."]
visible = false
modulate = Color( 0.364706, 0.811765, 0.105882, 0.364706 )
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="." to="." method="_on_Field_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Field_mouse_exited"]
